fix image overflowing

--- a/component-library/components/sections/hero/hero.scss
+++ b/component-library/components/sections/hero/hero.scss
@@ -1,6 +1,6 @@
 .c-hero {
   $c: &;
-  height: calc(100svh - 60px);
+  height: calc(100svh - 60px); //60px is the height of the header
   display: grid;
   grid-template-columns: var(--twelve-column-grid);
   color: var(--brand-grey-000, #f9f9fb);
@@ -31,31 +31,36 @@
     }
   }
   &--left-right-variant {
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto minmax(0, 1fr);
     row-gap: 3rem;
-    #{$c}__cover {
-      grid-row: 2 / 3;
-    }
     #{$c}__content {
       margin-top: 3rem;
       grid-row: 1 / 2;
       border-left: solid 2px;
       padding-left: 1.5rem;
     }
+    #{$c}__cover {
+      grid-row: 2 / 3;
+    }
     & .c-image,
     .c-image--live-editing {
       grid-row: 2 / 3;
-      grid-column: 1 / -1;
+      // grid-column: 1 / -1;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: calc(100svh - 120px); //120px is the height of the header
     }
 
     @media screen and (min-width: 1023px) {
       grid-template-rows: unset;
-      #{$c}__cover {
-        grid-row: 1 / 2;
-      }
       #{$c}__content {
         grid-row: 1 / 2;
         grid-column: 2 / 8;
+      }
+      #{$c}__cover {
+        grid-column: 9 / -1;
+        grid-row: 1 / 2;
       }
       & .c-image,
       .c-image--live-editing {
